# INF515-CG2_WS24

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
task01-window/: CMakeLists.txt  window.cc
task02-clear_color/: CMakeLists.txt  clear_color.cc
task03-triangles/: CMakeLists.txt  triangles.cc
task04-two_shaders/: CMakeLists.txt  two_shaders.cc
task05-shader_class/: CMakeLists.txt  example.cc  fragment_shader.fs  shader.hh
task06-uniform/: CMakeLists.txt  fragment_shader.fs  shader.cc  uniform.cc  vertex_shader.vs
task07-procedural/: CMakeLists.txt  fragment_shader.fs  procedural.cc  shader.hh
task08-animation/: CMakeLists.txt  animation.cc  fragment_shader.fs  shader.cc  vertex_shader.vs
task09-uv_coordinates/: CMakeLists.txt  fragment_shader.fs  uv_coords.cc  vertex_shader.vs
task10-mipmaps/: CMakeLists.txt  fragment_shader.fs  mipmaps.cc  vertex_shader.vs
task11-glm/: CMakeLists.txt  glm.cc  vertex_shader.vs
task12-transform/: CMakeLists.txt  transformation.cc
task13-julia_set/: CMakeLists.txt  fragment_shader.fs  julia_set.cc  load_stb.hh  vertex_shader.vs
task14-rotating_cam/: CMakeLists.txt  load_stb.hh  rotating_cam.cc  vertex_shader.vs
task15-fps_cam/: CMakeLists.txt  camera.cc  camera.hh  fps_cam.cc  fragment_shader.fs  shader.cc  shader.hh  vertex_shader.vs
