# Projects Settings
cmake_minimum_required (VERSION 3.1)
project (INF515-Computergrafik_II)

add_definitions(-DGLEW_STATIC)
add_subdirectory(lib/glfw EXCLUDE_FROM_ALL)
add_subdirectory(lib/glew EXCLUDE_FROM_ALL)
add_subdirectory(lib/glm EXCLUDE_FROM_ALL)

add_subdirectory(task01-window)
add_subdirectory(task02-clear_color)
add_subdirectory(task03-triangles)
add_subdirectory(task04-two_shaders)
add_subdirectory(task05-shader_class)
add_subdirectory(task06-uniform)
add_subdirectory(task07-procedural)
add_subdirectory(task08-animation)
add_subdirectory(task09-uv_coordinates)
add_subdirectory(task10-mipmaps)
add_subdirectory(task11-glm)
add_subdirectory(task12-transform)
add_subdirectory(task13-julia_set)
add_subdirectory(task14-rotating_cam)
add_subdirectory(task15-fps_cam)
